kubernetes/dns/apps/flux-system/add-ons/webhook/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  ingressClassName: "external"
  rules:
    - host: &host "flux-receiver.kokoro.wtf"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - secretName: *host
      hosts:
        - *host
